开发环境openId，账号列表返回状态信息
